# stepik_cpp

./: .gitignore  CMakePresets.json
scopedptr/: CMakeLists.txt  main.cpp
sharedptr/: CMakeLists.txt  main.cpp  test_main.cpp
string/: CMakeLists.txt  main.cpp
templates/: CMakeLists.txt  array.cpp  array_size.cpp  copy.cpp  inheritance.cpp  specialization.cpp
